# colabcli

./: .gitignore  LICENSE  README.md  colab_server.ipynb  colab_server.py  pyproject.toml  test_colabcli.ipynb  test_interrupt.ipynb  test_magic_commands.ipynb  test_minimal.ipynb
colabmcp_cli/: __init__.py  cli.py  executor.py  notebook.py
tests/: __init__.py  demo.ipynb  demo.py
