[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colabmcp-cli"
version = "1.0.0"
description = "CLI tool to run Jupyter Notebooks (.ipynb) with streaming output per cell"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "ColabMCP Team"}
]
keywords = ["jupyter", "notebook", "cli", "streaming", "colab"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "ipython>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[project.scripts]
colabmcp = "colabmcp_cli.cli:main"

[project.urls]
Homepage = "https://github.com/ctz168/colabcli"
Repository = "https://github.com/ctz168/colabcli"

[tool.setuptools.packages.find]
where = ["."]
include = ["colabmcp_cli*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
